# AlGlobo.com

./: .gitignore  README.md  transaction_generator_utility.py
.github/workflows/: rust-alglobo.yml
aerolinea/: Cargo.toml
aerolinea/src/: main.rs
alglobo/: Cargo.toml
alglobo-common-utils/: Cargo.toml
alglobo-common-utils/src/: entity_logger.rs  entity_payload.rs  entity_type.rs  lib.rs  transaction_request.rs  transaction_response.rs  transaction_state.rs
alglobo/src/: beater_responder.rs  bootstrapper.rs  entity_data.rs  entity_messenger.rs  entity_receiver.rs  entity_sender.rs  file_reader.rs  file_writer.rs  logger.rs  main.rs  ok_timeout_handler.rs  pinger_finder.rs  statistics_handler.rs  transaction.rs  transaction_coordinator.rs  transaction_dispatcher.rs  transactions.csv  transactions.txt
banco/: Cargo.toml
banco/src/: main.rs
hotel/: Cargo.toml
hotel/src/: main.rs
