[package]
name = "aerolinea"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
actix = "0.11.1"
actix-rt = "2.0" # <-- Runtime for actix
alglobo-common-utils = { version = "0.1", path = "../alglobo-common-utils" }