[package]
name = "alglobo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
actix-rt = "2.0" # <-- Runtime for actix
alglobo-common-utils = { version = "0.1", path = '../alglobo-common-utils' }
csv = "1.1.6"
float-cmp = "0.9.0"
rand = "0.7"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = "1.19.2"
serde = { version = "1.0.137", features = ["derive"] }